--- a/community.html
+++ b/community.html
@@ -6,32 +6,41 @@
     <title>SotN Randomizer Leaderboards</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="community.css">
 </head>
 <body class="menu text-white">
-    <div class="navbar">
-        <ul class="nav-links">
-            <li class="nav-item"><a href="index.html">Randomizer</a></li>
-            <li class="nav-item"><a href="/faq">FAQ</a></li>
-            <li class="nav-item"><a href="https://ppf.sotn.io">PPF Patcher</a></li>
-            <li class="nav-item"><a href="#">Leaderboards</a></li>
-            <li class="nav-item dropdown">
-                <a href="#">Tools ▼</a>
-                <div class="dropdown-content">
-                    <a href="https://github.com/LuciaRolon/SotNRandomizerLauncher/releases">Randomizer Launcher</a>
-                    <a href="https://taliczealot.github.io/#/apps/sotnrandotools">Rando Tools</a>
-                    <a href="https://github.com/MottZilla/BountyHunterTool/releases/">Bounty Hunter Tool</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a href="#">Community & News ▼</a>
-              <div class="dropdown-content">
-                  <a href="https://discord.gg/dzbKhQDjrs">Long Library Discord</a>
-                  <a href="https://www.symphonyrando.fun">Knowledge Database (sr.f)</a>
-              </div>
-          </li>
-        </ul>
-    </div>
+    <div class="container">
+        <nav>
+          <div class="menu-icons">
+            <i class="icon ion-md-menu"></i>
+            <i class="icon ion-md-close"></i>
+          </div>
+        
+        <ul class="nav-list">
+            <li><a href="#">Randomizer</a></li>
+            <li><a href="/faq">FAQ</a></li>
+            <li><a href="https://ppf.sotn.io">PPF Patcher</a></li>
+            <li><a href="community.html">Leaderboards</a></li>
+                <li>
+                      <a href="#">Community & News ▼</a>
+                    <ul class="sub-menu">
+                      <li><a href="https://discord.gg/dzbKhQDjrs">Long Library Discord</a></li>
+                      <li><a href="https://www.symphonyrando.fun">Knowledge Database (sr.f)</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Tools ▼</a>
+                    <ul class="sub-menu">
+                      <li><a href="https://github.com/LuciaRolon/SotNRandomizerLauncher/releases">Randomizer Launcher</a></li>
+                      <li><a href="https://taliczealot.github.io/#/apps/sotnrandotools">Rando Tools</a></li>
+                      <li><a href="https://github.com/MottZilla/BountyHunterTool/releases/">Bounty Hunter Tool</a></li>
+                    </ul>
+                </li>
+          
+          </ul>
+        </nav>
+      </div>
     <div class="container my-5">
         <h1 class="text-center mb-4">Leaderboards</h1>
         <div class="d-flex justify-content-between mb-3">
