--- a/index.html
+++ b/index.html
@@ -760,28 +760,6 @@
         </form>
         <div id="notification"><span>Copied to clipboard<span></div>
         <hr>
-        <h2><a name="links">Links</a></h2>
-        <ul>
-          <li><a href="/faq">FAQ</a></li>
-          <li>
-            <a href="https://taliczealot.github.io/#/apps/sotnrandotools">Rando Tools</a>,
-            a collection of tools to enhance the randomizer experience.
-          </li>
-          <li><a href="https://ppf.sotn.io">PPF Patcher [Browser version]</a></li>
-          <li><a href="https://discord.gg/dzbKhQDjrs">The Long Library</a>,
-            a SotN discord server with a dedicated <code>#randomizer</code>
-            channel.</li>
-          <li><a href="https://www.symphonyrando.fun">SymphonyRando.Fun</a>,
-            SotN Randomizer Database, containing tutorials, glossaries, and breakdowns.</li>
-          <li><a href="https://github.com/LuciaRolon/SotNRandomizerLauncher/releases">SotNRandomizerLauncher</a>,
-            A PC-based launcher for the randomizer that helps you get started.</li>
-          <li><a href="https://github.com/MottZilla/BountyHunterTool/releases/">Bounty Hunter Tool</a>,
-            The key ingredient in the highly popular Bounty Hunter preset.</li>
-          <li><a href="community.html">Player Leaderboards</a>,
-            Look at the current season's Leaderboards for those who race in the Long Library Discord.</li>
-        </ul>
-        </ul>
-        <hr>
         <h2><a name="changelog">Changelog</a></h2>
         <h3><time>May 12, 2025</time></h3>
         <ul>
@@ -807,6 +785,7 @@
           <li>Added the SOTNRando icon to the navigation bar.</li>
           <li>Added the SOTNRando header image courtesy of DarkFalzJoker to the top of the site.</li>
           <li>Added a new section to help players preview which customizations they might wish to use for their Alucard and Map sprites.</li>
+          <li>All links in the links section now removed and moved to navigation bar.</li>
           <li>Added visual effects to the navigation bar for a more satisfying experience.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
