--- a/index.html
+++ b/index.html
@@ -777,6 +777,7 @@
           <li>Added an additional goal to update the game to: All Bosses and all Vlads.</li>
           <li>Removed potential softlock from starting in Castle Keep attic in Starting Room Randomizer.</li>
           <li>Updated Color Randomizer to use hue-shifting for capes proposed by Wecoc.</li>
+          <li>Added Menu Color to Color Randomizer.</li>
           <h4>Program Updates</h4>
           <li>Added randomized splash phrases to the game title screen.</li>
           <h4>Website Updates</h4>
