--- a/index.html
+++ b/index.html
@@ -788,6 +788,8 @@
           <li>Added a new section to help players preview which customizations they might wish to use for their Alucard and Map sprites.</li>
           <li>All links in the links section now removed and moved to navigation bar.</li>
           <li>Added visual effects to the navigation bar for a more satisfying experience.</li>
+          <h4>Tools Updates</h4>
+          <li>Upgraded Map View to give more detailed information about the entities and to properly name more of them.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
