--- a/index.html
+++ b/index.html
@@ -780,6 +780,7 @@
           <li>Added Menu Color to Color Randomizer.</li>
           <h4>Program Updates</h4>
           <li>Added randomized splash phrases to the game title screen.</li>
+          <li>Added a feature where updated goals can be added to preset files using letter codes. "b: All Bosses; r: All Relics; a: ABRSR, v: All Bosses & All Vlads"</li>
           <h4>Website Updates</h4>
           <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
           <li>Fixed a bug where the complexity inner text wasn't updating causing misunderstandings about the complexity of the selected preset.</li>
