changes to community.html
fixes to community.html not scrolling on android. also fixed grammar of the changelog

--- a/community.html
+++ b/community.html
@@ -18,7 +18,7 @@
           </div>
         
         <ul class="nav-list">
-            <li><a href="#">Randomizer</a></li>
+            <li><a href="index.html">Randomizer</a></li>
             <li><a href="/faq">FAQ</a></li>
             <li><a href="https://ppf.sotn.io">PPF Patcher</a></li>
             <li><a href="community.html">Leaderboards</a></li>
