--- a/index.html
+++ b/index.html
@@ -784,11 +784,11 @@
           <li>Added a feature where updated goals can be added to preset files using letter codes. "b: All Bosses; r: All Relics; a: ABRSR, v: All Bosses & All Vlads"</li>
           <h4>Website Updates</h4>
           <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
-          <li>Fixed a bug where the complexity inner text wasn't updating causing misunderstandings about the complexity of the selected preset.</li>
+          <li>Fixed a bug where the complexity inner text didn't update, causing misunderstandings about the complexity of the selected preset.</li>
           <li>Added the SOTNRando icon to the navigation bar.</li>
           <li>Added the SOTNRando header image courtesy of DarkFalzJoker to the top of the site.</li>
           <li>Added a new section to help players preview which customizations they might wish to use for their Alucard and Map sprites.</li>
-          <li>All links in the links section now removed and moved to navigation bar.</li>
+          <li>All links in the links section have been removed and moved to a navigation bar.</li>
           <li>Added visual effects to the navigation bar for a more satisfying experience.</li>
           <h4>Tools Updates</h4>
           <li>Upgraded Map View to give more detailed information about the entities and to properly name more of them.</li>
