--- a/index.html
+++ b/index.html
@@ -779,6 +779,7 @@
           <li>Updated Color Randomizer to use hue-shifting for capes proposed by Wecoc.</li>
           <li>Added Menu Color to Color Randomizer.</li>
           <li>Corrected an error in Starting Equipment spoilers when Item Name Randomizer Mode was not being used.</li>
+          <li>Corrected an error with New Goals that allowed players to open the Dracula door in second castle without Eye of Vlad.</li>
           <h4>Program Updates</h4>
           <li>Added randomized splash phrases to the game title screen.</li>
           <li>Added a feature where updated goals can be added to preset files using letter codes. "b: All Bosses; r: All Relics; a: ABRSR, v: All Bosses & All Vlads"</li>
