Preset Initiative; new presets added

--- a/index.html
+++ b/index.html
@@ -761,41 +761,65 @@
         <div id="notification"><span>Copied to clipboard<span></div>
         <hr>
         <h2><a name="changelog">Changelog</a></h2>
-        <h3><time>May 12, 2025</time></h3>
+        <h3><time>June 9, 2025</time></h3>
         <ul>
+          <h4>Some Notes On This Month's Changes</h4>
+          <li>
+            This month marks the beginning of a new initiative with the SOTN Randomizer to start auditing and operating some 
+            quality control on the presets being included in the Randomizer or on the website. Certain presets will be "deprecated" 
+            and removed from the ranbdomizer website while still being included in the Randomizer's files for offline generation. 
+            This is all in an effort to maintain a simpler list for the players to interact with while we build-out our new 
+            filtration systems which will actively edit the list based on selections made by users. We will be calling out which 
+            presets are being removed from where and indicatin how they can be accessed in the change log to help users find them 
+            in the future. On top of this, we will be auditing preset files, themselves, and ordering the JSON data so that everything 
+            becomes easier to understand for would-be developers. We appreciate your patience with our housekeeping initiatives.
+          </li>
           <h4>Preset Changes</h4>
-          <li>Added Second Castle Starting Room Randomizer to Chaos-Lite.</li>
-          <li>Familiar cards are no longer given to the player "active" in Timeline.</li>
-          <li>Timeline's timer no longer pauses in the menu.*</li>
-          <li>Added code to give the player a Toadstool at the beginning of Big Toss.</li>
-          <li>Come to me, Glitch, son of romscout! Kneel before Eld!</li>
-          <h4>Options Changes</h4>
-          <li>Removed preset tickbox because all features locked behind it are now available.</li>
-          <li>Removed extensions options for presets which can't use them.</li>
-          <li>Added palettes for Wolf form to match Alucard palettes.</li>
-          <li>Corrected an error where a variable was not set when generating through the website for Random Starting Room.</li>
-          <li>Added an additional goal to update the game to: All Bosses and all Vlads.</li>
-          <li>Removed potential softlock from starting in Castle Keep attic in Starting Room Randomizer.</li>
-          <li>Updated Color Randomizer to use hue-shifting for capes proposed by Wecoc.</li>
-          <li>Added Menu Color to Color Randomizer.</li>
-          <li>Corrected an error in Starting Equipment spoilers when Item Name Randomizer Mode was not being used.</li>
-          <li>Corrected an error with New Goals that allowed players to open the Dracula door in second castle without Eye of Vlad.</li>
-          <h4>Program Updates</h4>
-          <li>Added randomized splash phrases to the game title screen.</li>
-          <li>Added a feature where updated goals can be added to preset files using letter codes. "b: All Bosses; r: All Relics; a: ABRSR, v: All Bosses & All Vlads"</li>
-          <h4>Website Updates</h4>
-          <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
-          <li>Fixed a bug where the complexity inner text didn't update, causing misunderstandings about the complexity of the selected preset.</li>
-          <li>Added the SOTNRando icon to the navigation bar.</li>
-          <li>Added the SOTNRando header image courtesy of DarkFalzJoker to the top of the site.</li>
-          <li>Added a new section to help players preview which customizations they might wish to use for their Alucard and Map sprites.</li>
-          <li>All links in the links section have been removed and moved to a navigation bar.</li>
-          <li>Added visual effects to the navigation bar for a more satisfying experience.</li>
-          <h4>Tools Updates</h4>
-          <li>Upgraded Map View to give more detailed information about the entities and to properly name more of them.</li>
+          <li>Added Seeker preset.</li>
+          <li>Added Oracle preset.</li>
+          <li>Added Boss Reflector preset.</li>
+          <li>Added All Bosses preset.</li>
+          <li>Lookingglass is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
+          <li>Crash Coarse is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
+          <li>Skinwalker is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
+          <li>Re-added Glitch Legacy as Deprecated. This can now be generated through Command Line Interface (CLI) and will be built en masse.</li>
+          <li>How do I fixed Glitch?</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
+          <h3><time>May 12, 2025</time></h3>
+          <ul>
+            <h4>Preset Changes</h4>
+            <li>Added Second Castle Starting Room Randomizer to Chaos-Lite.</li>
+            <li>Familiar cards are no longer given to the player "active" in Timeline.</li>
+            <li>Timeline's timer no longer pauses in the menu.*</li>
+            <li>Added code to give the player a Toadstool at the beginning of Big Toss.</li>
+            <li>Come to me, Glitch, son of romscout! Kneel before Eld!</li>
+            <h4>Options Changes</h4>
+            <li>Removed preset tickbox because all features locked behind it are now available.</li>
+            <li>Removed extensions options for presets which can't use them.</li>
+            <li>Added palettes for Wolf form to match Alucard palettes.</li>
+            <li>Corrected an error where a variable was not set when generating through the website for Random Starting Room.</li>
+            <li>Added an additional goal to update the game to: All Bosses and all Vlads.</li>
+            <li>Removed potential softlock from starting in Castle Keep attic in Starting Room Randomizer.</li>
+            <li>Updated Color Randomizer to use hue-shifting for capes proposed by Wecoc.</li>
+            <li>Added Menu Color to Color Randomizer.</li>
+            <li>Corrected an error in Starting Equipment spoilers when Item Name Randomizer Mode was not being used.</li>
+            <li>Corrected an error with New Goals that allowed players to open the Dracula door in second castle without Eye of Vlad.</li>
+            <h4>Program Updates</h4>
+            <li>Added randomized splash phrases to the game title screen.</li>
+            <li>Added a feature where updated goals can be added to preset files using letter codes. "b: All Bosses; r: All Relics; a: ABRSR, v: All Bosses & All Vlads"</li>
+            <h4>Website Updates</h4>
+            <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
+            <li>Fixed a bug where the complexity inner text didn't update, causing misunderstandings about the complexity of the selected preset.</li>
+            <li>Added the SOTNRando icon to the navigation bar.</li>
+            <li>Added the SOTNRando header image courtesy of DarkFalzJoker to the top of the site.</li>
+            <li>Added a new section to help players preview which customizations they might wish to use for their Alucard and Map sprites.</li>
+            <li>All links in the links section have been removed and moved to a navigation bar.</li>
+            <li>Added visual effects to the navigation bar for a more satisfying experience.</li>
+            <h4>Tools Updates</h4>
+            <li>Upgraded Map View to give more detailed information about the entities and to properly name more of them.</li>
+          </ul>
           <h3><time>April 14, 2025</time></h3>
           <ul>
             <h4>Options Changes</h4>
@@ -1428,10 +1452,7 @@
     <script src="build/presets/beyond.js"></script>
     <script src="build/presets/breach.js"></script>
     <script src="build/presets/grand-tour.js"></script>
-    <script src="build/presets/crash-course.js"></script>
     <script src="build/presets/any-percent.js"></script>
-    <script src="build/presets/lookingglass.js"></script>
-    <script src="build/presets/skinwalker.js"></script>
     <script src="build/presets/summoner.js"></script>
     <script src="build/presets/agonize-twtw.js"></script>
     <script src="build/presets/safe-stwo.js"></script>
@@ -1449,7 +1470,10 @@
     <script src="build/presets/chimera.js"></script>
     <script src="build/presets/timeline.js"></script>
     <script src="build/presets/vanilla.js"></script>
-    <script src="build/presets/april-fools.js"></script>
+    <script src="build/presets/oracle.js"></script>
+    <script src="build/presets/seeker.js"></script>
+    <script src="build/presets/all-bosses.js"></script>
+    <script src="build/presets/boss-reflector.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
