--- a/index.html
+++ b/index.html
@@ -779,10 +779,12 @@
           <li>Added Oracle preset.</li>
           <li>Added Boss Reflector preset.</li>
           <li>Added All Bosses preset.</li>
+          <li>Added Nimble-Lite preset.</li>
           <li>Lookingglass is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Crash Coarse is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Skinwalker is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Re-added Glitch Legacy as Deprecated. This can now be generated through Command Line Interface (CLI) and will be built en masse.</li>
+          <li>Re-named Bounty Hunter: TC to Target Confirmed.</li>
           <li>How do I fixed Glitch?</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
@@ -1446,7 +1448,7 @@
     <script src="build/presets/aperture.js"></script>
     <script src="build/presets/big-toss.js"></script>
     <script src="build/presets/bountyhunter.js"></script>
-    <script src="build/presets/bountyhuntertc.js"></script>
+    <script src="build/presets/target-confirmed.js"></script>
     <script src="build/presets/hitman.js"></script>
     <script src="build/presets/chaos-lite.js"></script>
     <script src="build/presets/beyond.js"></script>
@@ -1474,6 +1476,7 @@
     <script src="build/presets/seeker.js"></script>
     <script src="build/presets/all-bosses.js"></script>
     <script src="build/presets/boss-reflector.js"></script>
+    <script src="build/presets/nimble-lite.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
