changelog and update ReadMe to remove old domains

--- a/index.html
+++ b/index.html
@@ -785,6 +785,7 @@
           <li>Skinwalker is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Re-added Glitch Legacy as Deprecated. This can now be generated through Command Line Interface (CLI) and will be built en masse.</li>
           <li>Re-named Bounty Hunter: TC to Target Confirmed.</li>
+          <li>The preset audit was successful. Almost every preset has been re-weighted and had the flags sorted to create a uniform order to them.</li>
           <li>How do I fixed Glitch?</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
