--- a/index.html
+++ b/index.html
@@ -780,12 +780,13 @@
           <li>Added Boss Reflector preset.</li>
           <li>Added All Bosses preset.</li>
           <li>Added Nimble-Lite preset.</li>
+          <li>Added Rampage preset.</li>
           <li>Lookingglass is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Crash Coarse is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Skinwalker is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Re-added Glitch Legacy as Deprecated. This can now be generated through Command Line Interface (CLI) and will be built en masse.</li>
           <li>Re-named Bounty Hunter: TC to Target Confirmed.</li>
-          <li>The preset audit was successful. Almost every preset has been re-weighted and had the flags sorted to create a uniform order to them.</li>
+          <li>The preset audit was successful. Almost every preset has been re-weighted and had the keys sorted to create a uniform order to them.</li>
           <li>How do I fixed Glitch?</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
@@ -1478,6 +1479,7 @@
     <script src="build/presets/all-bosses.js"></script>
     <script src="build/presets/boss-reflector.js"></script>
     <script src="build/presets/nimble-lite.js"></script>
+    <script src="build/presets/rampage.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
