Added flagging and keys to facilitate BH mode

--- a/index.html
+++ b/index.html
@@ -360,6 +360,9 @@
                     <option value="allRelic">All Relics</option>
                     <option value="abrsr">All Bosses & Relics</option>
                     <option value="vladBoss">All Bosses & Vlad Relics</option>
+                    <option value="bhNorm">Bounty Hunter</option>
+                    <option value="bhAdvanced">Target Confirmed</option>
+                    <option value="bhBoss">All Bosses & Bounties</option>
                   </select>
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
@@ -1449,7 +1452,7 @@
     <script src="build/presets/boss-rush.js"></script>
     <script src="build/presets/aperture.js"></script>
     <script src="build/presets/big-toss.js"></script>
-    <script src="build/presets/bountyhunter.js"></script>
+    <script src="build/presets/bounty-hunter.js"></script>
     <script src="build/presets/target-confirmed.js"></script>
     <script src="build/presets/hitman.js"></script>
     <script src="build/presets/chaos-lite.js"></script>
