--- a/index.html
+++ b/index.html
@@ -784,6 +784,7 @@
           <li>Added All Bosses preset.</li>
           <li>Added Nimble-Lite preset.</li>
           <li>Added Rampage preset.</li>
+          <li>Bounty Hunter, Hitman, Target Confirmed, Chaos Lite, and Rampage no longer require the Bounty Hunter Tool.</li>
           <li>Lookingglass is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Crash Coarse is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Skinwalker is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
@@ -791,6 +792,8 @@
           <li>Re-named Bounty Hunter: TC to Target Confirmed.</li>
           <li>The preset audit was successful. Almost every preset has been re-weighted and had the keys sorted to create a uniform order to them.</li>
           <li>How do I fixed Glitch?</li>
+          <h4>Program Updates</h4>
+          <li>Incorporated Bounty Hunter tool function into the Randomizer.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
