Implemented Hitman coding from function

--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
                     <option value="vladBoss">All Bosses & Vlad Relics</option>
                     <option value="bhNorm">Bounty Hunter</option>
                     <option value="bhAdvanced">Target Confirmed</option>
+                    <option value="bhHitman">Hitman</option>
                     <option value="bhBoss">All Bosses & Bounties</option>
                   </select>
                   <span class="tooltip-wrapper">
