Add cornivus preset

--- a/index.html
+++ b/index.html
@@ -1487,6 +1487,7 @@
     <script src="build/presets/boss-reflector.js"></script>
     <script src="build/presets/nimble-lite.js"></script>
     <script src="build/presets/rampage.js"></script>
+    <script src="build/presets/cornivus.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
