Update Chaos Lite and Rampage

--- a/index.html
+++ b/index.html
@@ -786,6 +786,7 @@
           <li>Added Nimble-Lite preset.</li>
           <li>Added Rampage preset.</li>
           <li>Bounty Hunter, Hitman, Target Confirmed, Chaos Lite, and Rampage no longer require the Bounty Hunter Tool.</li>
+          <li>Added Item Stat and Item Name Randomizer to Chaos-Lite.</li>
           <li>Lookingglass is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Crash Coarse is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
           <li>Skinwalker is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
