--- a/index.html
+++ b/index.html
@@ -828,6 +828,8 @@
           <li>How do I fixed Glitch?</li>
           <h4>Program Updates</h4>
           <li>Incorporated Bounty Hunter tool function into the Randomizer.</li>
+          <h4>Options Changes</h4>
+          <li>Added new Separate Boss Music Randomizer mode for music randomization (CLI only, coming to the website later).</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
