Fixed preset writes processing from Boss Music Separation
also fixed Cornivus to have random equiment

--- a/index.html
+++ b/index.html
@@ -704,7 +704,19 @@
                   </label>
                 </div>
                 <div>     </div>
-                <div>     </div>
+                <div>     
+                  <input id="boss-music-separation" type="checkbox">
+                  <label for="boss-music-separation">Separate Boss Music
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Separates Boss music and Normal stage music randomization. Prevents hearing Enchanted Banquet for 10 minutes.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
                 <div>     </div>
                 <div>     </div>
                 <div>     </div>
@@ -829,7 +841,7 @@
           <h4>Program Updates</h4>
           <li>Incorporated Bounty Hunter tool function into the Randomizer.</li>
           <h4>Options Changes</h4>
-          <li>Added new Separate Boss Music Randomizer mode for music randomization (CLI only, coming to the website later).</li>
+          <li>Added new Separate Boss Music Randomizer mode for music randomization.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
