Preset additions and updates
Added Max Rando preset and updated Seeker to have more streamlined opening.

--- a/index.html
+++ b/index.html
@@ -829,6 +829,7 @@
           <li>Added Nimble-Lite preset.</li>
           <li>Added Rampage preset.</li>
           <li>Added Cornivus preset.</li>
+          <li>Added Max Rando preset.</li>
           <li>Bounty Hunter, Hitman, Target Confirmed, Chaos Lite, and Rampage no longer require the Bounty Hunter Tool.</li>
           <li>Added Item Stat and Item Name Randomizer to Chaos-Lite.</li>
           <li>Lookingglass is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
@@ -1535,6 +1536,7 @@
     <script src="build/presets/nimble-lite.js"></script>
     <script src="build/presets/rampage.js"></script>
     <script src="build/presets/cornivus.js"></script>
+    <script src="build/presets/max-rando.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
