Added Immunity potions Mode

--- a/index.html
+++ b/index.html
@@ -711,14 +711,29 @@
                       <span class="tooltip-indicator">?</span>
                       <span class="tooltip hidden">
                         <span>
-                          Separates Boss music and Normal stage music randomization. Prevents hearing Enchanted Banquet for 10 minutes.
+                          Separates Boss music and Normal stage music randomization. 
+                          Prevents hearing Enchanted Banquet for 10 minutes.
                         </span>
                       </span>
                     </span>
                   </label>
                 </div>
                 <div>     </div>
-                <div>     </div>
+                <div>     
+                  <input id="immunity-potion-mode" type="checkbox">
+                  <label for="immunity-potion-mode">Immmunity Potions
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Converts Resist Fire, Resist Ice, etc. potions to grant 
+                          Immunity to the element in question and allows them to grant 
+                          invincibility frames.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
                 <div>     </div>
                 <div>     </div>
                 <div>     </div>
