Updated songs list; changelog

--- a/index.html
+++ b/index.html
@@ -886,6 +886,9 @@
           <li>Incorporated Bounty Hunter tool function into the Randomizer.</li>
           <h4>Options Changes</h4>
           <li>Added new Separate Boss Music Randomizer mode for music randomization.</li>
+          <li>Added Song Exclusion to the website.</li>
+          <li>Removed Nocturne from the songs to be randomized.</li>
+          <li>Added Immunity Potions option.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
