fix to Alucard Display.
fix to Alucard's display on the website that was altering the Exclude songs container

--- a/index.html
+++ b/index.html
@@ -794,10 +794,12 @@
                     <option value="silver">Silver Liner</option>
                     <option value="onyx">Onyx Liner</option>
                     <option value="coral">Coral Liner</option>
-                  </select>                            
+                  </select>
                 <div class = "alucard-display">
-                  <div id="alucardPaletteDisplay" style="width:96px; height:64px; background: url(https://i.servimg.com/u/f81/20/40/06/51/alucar10.png);"/>
-                  <div id="alucardLinerDisplay" style="width:96px; height:64px; background: url(https://i.servimg.com/u/f81/20/40/06/51/alucar10.png);"/>
+                  <div id="alucardLinerDisplay" style="position: absolute; width:96px; height:64px; background: url(https://i.servimg.com/u/f81/20/40/06/51/alucar10.png);"></div>
+                </div>                            
+                <div class = "alucard-display">
+                  <div id="alucardPaletteDisplay" style="width:96px; height:64px; background: url(https://i.servimg.com/u/f81/20/40/06/51/alucar10.png);"></div>
                 </div>
                 <div>
                   <label>
