spelling and debugging

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                 <div>     </div>
                 <div>     
                   <input id="immunity-potion-mode" type="checkbox">
-                  <label for="immunity-potion-mode">Immmunity Potions
+                  <label for="immunity-potion-mode">Immunity Potions
                     <span class="tooltip-wrapper">
                       <span class="tooltip-indicator">?</span>
                       <span class="tooltip hidden">
