Change Copy seed to a Copy Spoilers button

--- a/index.html
+++ b/index.html
@@ -817,14 +817,13 @@
                   </div>
                 </div>  
               </fieldset>
-        </div>
-               
-          <div class="pure-u-9-24">
+        </div>               
+          <div>
             <div id="spoilers-container" class="hide" style="display: none">
               <textarea id="spoilers" rows="8" cols="32"></textarea>
             </div>
           </div>
-          <p id="buttons" class="pure-u-1">
+          <p id="buttons">
             <input id="randomize"
                    type="submit"
                    class="primary"
@@ -833,7 +832,7 @@
             <input id="copy"
                    type="submit"
                    disabled="disabled"
-                   value="Copy seed">
+                   value="Copy Spoilers">
           </p>
           <a id="download" style="display:none"></a>
           <div id="loader"></div>
